Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-10

Fix timestamp moving between timezones (HIVE-8746 in C++)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.1.0
    • C++, encoding
    • None

    Description

      ORC stores the difference from an epoch in the local timezone. That makes ORC mostly resilient when moving between timezones, but fails when moving between timezones with different daylight savings rules.

      ORC currently stores the timezone information in the stripe footer, so that the reader can understand the times correctly.

      Attachments

        Activity

          People

            omalley Owen O'Malley
            omalley Owen O'Malley
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: