ORC-10. Correct bug when moving ORC files between timezones.