c++/test/TestColumnReader.cc
@@ -25,6 +25,7 @@
 #include "wrap/gtest-wrapper.h"
 #include "wrap/gmock.h"
 
+#include <cmath>
 #include <iostream>
 #include <vector>
 
@@ -49,9 +50,8 @@ public:
     return *getDefaultPool();
   }
 
-  // the epoch offset for America/Los_Angeles
-  int64_t getEpochOffset() const {
-    return 1420099200;
+  const Timezone& getWriterTimezone() const override {
+    return getTimezoneByName("America/Los_Angeles");
   }
 };
 
@@ -65,6 +65,10 @@ MockStripeStreams::getStream(uint64_t columnId,
                              bool shouldStream) const {
   return std::unique_ptr < SeekableInputStream >
     (getStreamProxy(columnId, kind, shouldStream));
+}
+
+bool isNotNull(tm *timeptr) {
+  return timeptr != nullptr;
 }
 
 TEST(TestColumnReader, testBooleanWithNulls) {
@@ -2380,7 +2384,7 @@ TEST(TestColumnReader, testFloatWithNulls) {
       EXPECT_EQ(0, doubleBatch->notNull[i]);
     } else if (i == 7) {
       EXPECT_EQ(1, doubleBatch->notNull[i]);
-      EXPECT_EQ(true, isnan(doubleBatch->data[i]));
+      EXPECT_EQ(true, std::isnan(doubleBatch->data[i]));
     } else {
       EXPECT_EQ(1, doubleBatch->notNull[i]);
       EXPECT_DOUBLE_EQ(test_vals[i], doubleBatch->data[i]);
@@ -2544,7 +2548,7 @@ TEST(TestColumnReader, testDoubleWithNulls) {
       EXPECT_EQ(0, doubleBatch->notNull[i]) << "Wrong value at " << i;
     } else if (i == 7) {
       EXPECT_EQ(1, doubleBatch->notNull[i]) << "Wrong value at " << i;
-      EXPECT_EQ(true, isnan(doubleBatch->data[i]));
+      EXPECT_EQ(true, std::isnan(doubleBatch->data[i]));
     } else {
       EXPECT_EQ(1, doubleBatch->notNull[i]) << "Wrong value at " << i;
       EXPECT_DOUBLE_EQ(test_vals[i], doubleBatch->data[i])
@@ -2705,7 +2709,11 @@ TEST(TestColumnReader, testTimestampSkipWithNulls) {
     } else {
       EXPECT_EQ(1, longBatch->notNull[i]);
       time_t time = static_cast<time_t>(longBatch->data[i]);
-      EXPECT_STREQ(expected[vals_ix], ctime(&time));
+      tm timeStruct;
+      ASSERT_PRED1(isNotNull, gmtime_r(&time, &timeStruct));
+      char buffer[30];
+      asctime_r(&timeStruct, buffer);
+      EXPECT_STREQ(expected[vals_ix], buffer);
       EXPECT_EQ(expected_nano[vals_ix], longBatch->nanoseconds[i]);
       vals_ix++;
     }
@@ -2724,7 +2732,11 @@ TEST(TestColumnReader, testTimestampSkipWithNulls) {
     } else {
       EXPECT_EQ(1, longBatch->notNull[i]);
       time_t time = static_cast<time_t>(longBatch->data[i]);
-      EXPECT_STREQ(expected[vals_ix], ctime(&time));
+      tm timeStruct;
+      ASSERT_PRED1(isNotNull, gmtime_r(&time, &timeStruct));
+      char buffer[30];
+      asctime_r(&timeStruct, buffer);
+      EXPECT_STREQ(expected[vals_ix], buffer);
       EXPECT_EQ(expected_nano[vals_ix], longBatch->nanoseconds[i]);
       vals_ix++;
     }
@@ -2764,7 +2776,6 @@ TEST(TestColumnReader, testTimestamp) {
   EXPECT_CALL(streams, getStreamProxy(1, proto::Stream_Kind_DATA, true))
       .WillRepeatedly(testing::Return(new SeekableArrayInputStream
                                       (buffer1, ARRAY_SIZE(buffer1))));
-
 
   const unsigned char buffer2[] = { 0xf6,
                                     0x00,
@@ -2822,7 +2833,11 @@ TEST(TestColumnReader, testTimestamp) {
 
   for (size_t i = 0; i < batch.numElements; ++i) {
     time_t time = static_cast<time_t>(longBatch->data[i]);
-    EXPECT_STREQ(expected[i], ctime(&time)) << "Wrong value at " << i;
+    tm timeStruct;
+    ASSERT_PRED1(isNotNull, gmtime_r(&time, &timeStruct));
+    char buffer[30];
+    asctime_r(&timeStruct, buffer);
+    EXPECT_STREQ(expected[i], buffer) << "Wrong value at " << i;
     EXPECT_EQ(expectedNano[i], longBatch->nanoseconds[i]);
   }
 }
